Fix discussion color contrast and remove gradients
TNL-5163

--- a/lms/static/sass/discussion/views/_create-edit-post.scss
+++ b/lms/static/sass/discussion/views/_create-edit-post.scss
@@ -162,13 +162,11 @@
 // UI: actions
 .forum-new-post-form {
   .submit {
-    @include blue-button;
     @include margin-right($baseline/2);
     display: inline-block;
   }
 
   .cancel {
-    @include white-button;
     display: inline-block;
   }
 }
